# simpPRU

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  README.md  confdefs.h  config.status  configure  configure.ac  generate_pinout_table.py  generate_pinout_table_json.py  mkdocs.yml  requirements.txt  test.py  tream>
.github/action_build_amd64/: Dockerfile  entrypoint.sh
.github/action_build_arm32/: Dockerfile  entrypoint.sh
.github/action_build_x86/: Dockerfile  entrypoint.sh
.github/action_test_amd64/: Dockerfile  entrypoint.sh
.github/action_test_arm32/: Dockerfile
.github/workflows/: amd64-test.yml  amd64.yml  arm32-test.yml  arm32.yml  build_deb.yml  c-cpp.yml  test-build.yml  testsuite.yml  x86.yml
assets/: bb_ai_pinout.json  bb_blue_pinout.json  pocket_beagle_pinout.json
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
docs/: header_mappings_table_gen.py  index.md  language.md  requirements.txt
docs/about/: about.md  license.md
docs/examples/: button_click_rpmsg.md  delay.md  digital_read.md  digital_write.md  hcsr04_example_rpmsg.md  hcsr04_sensor.md  led_blink.md  led_blink_button.md  led_blink_counter.md  led_blink_for.md  led_blink_while.md  read_counter.md  ring-testing.md  rpmsg_example.md  rpmsg_pru_calculator.md
docs/install/: build.md  install.md
docs/language-reference/: io.md  language.md
docs/usage/: usage-simppru-console.md  usage-simppru.md
examples/: assgn_decl_test.sim  button_click_rpmsg.sim  hcsr04_example.sim  hcsr04_example_rpmsg.sim  led_blink.sim  led_blink_counter.sim  led_blink_delay.sim  led_button.sim  rpmsg_example.sim  rpmsg_pru_calculator.sim  test.sim
frontend/: Makefile  assgn_decl_test.sim  ast.c  ast.h  code_printer.c  code_printer.h  compile  lex.yy.c  lexer  lexer.l  parser.output  parser.tab.c  parser.tab.h  parser.y  semantic.c  semantic.h  symbol_table.c  symbol_table.h  test.sim
generated_code/: Makefile.am  configure.ac  main0.c  rsc_types.h  temp.c  temp.pru0
generated_code/include/am335x/: pru_ecap.h
generated_code/libprurpmsg-1.0/: Makefile.am  Makefile.in  configure  configure.ac
include/: ast.h  code_printer.h  firmware_loader.h  parser.tab.h  pin_config.h  stringify_files.py  symbol_table.h
include/console/: console.hpp
include/pru/: resource_table_0.h  resource_table_1.h
pru/: resource_table.h
src/: Makefile  Makefile.am  Makefile.in  Makefile.manual  ast.c  ast.h  beagle_bone_pinout.json  code_printer.c  code_printer.h  firmware_loader.c  led_blink_for_loop.sim  led_button.sim  lex.yy.c  lexer.c  lexer.l  main.c  parser.c  parser.h  parser.tab.c  parser.y  pin_config.c  pin_config.h  pinout_table.h  semantic.c  simppru  symbol_table.c  symbol_table.h
src/console/: CMakeLists.txt  console.cpp
src/pru/: CMakeLists.txt
tests/run_anywhere/: addassign.sim  addassign.sim.output  arithmetic.sim  arithmetic.sim.output  arrays.sim  arrays.sim.output  boolean.sim  bw_test.sim  bwl_assign.sim  bws_assign.sim  comments.sim  comments.sim.output  comparison.sim  comparison.sim.output  datatypes.sim  datatypes.sim.output  flags.sim  forloop.sim  forloop.sim.output  functions.sim  functions.sim.output  ifelse.sim  ifelse.sim.output  mul-div-assign.sim  mul-div.sim  mul-div.sim.output  opcod.sim  print.sim  print.sim.output  return.sim  subassign.sim  unary.sim  unary_test.sim  unary_test.sim.output  whileloop.sim  whileloop.sim.output  xor.sim
