# I don't follow GNU file setup (no README, no AUTHORS, etc)
AUTOMAKE_OPTIONS = foreign subdir-objects

nobase_include_HEADERS = $(top_srcdir)/pru/* $(top_srcdir)/pru/am335x/* 

SUBDIRS = third-party/cJSON third-party/vec src
EXTRA_DIST = LICENSE README.md assets docs examples mkdocs.yml generate_pinout_table_json.py lib